<resources>
    <string name="app_name">Fynder</string>
    <string name="login_with">Sign in or register with:</string>
    <string name="login">Sign in</string>
    <string name="prompt_email">Email :</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_about">About</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_name_too_low">Your name is too low</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_request_register">Do not have an account?</string>
    <string name="login_register_here">Register here</string>
    <string name="login_progress_google">Connecting to Google..</string>
    <string name="login_progress_facebook">Connecting to Facebook..</string>
    <string name="login_progress_twitter">Connecting to Twitter..</string>
    <string name="login_failed_google">Sorry, Sign in with Google has failed</string>
    <string name="login_failed_facebook">Sorry, Sign in with Facebook has failed</string>
    <string name="login_failed">Sorry, Sign in has failed</string>
    <string name="login_banned">Sorry %1$s, your account has blocked.</string>
    <string name="login_error_verification">The email has already registered or your account has banned</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="action_register">Register</string>
    <string name="action_confirmation">Confirmation</string>
    <string name="login_required">You need to login first, and try again.</string>
    <string name="other_options">Skip</string>
    <string name="login_with_yipchat">Login with Fynder</string>
    <string-array name="login_introduction">
        <item>Communication with thousands of people around the world, over global Chat Room.</item>
        <item>Meet the online users available around you.</item>
        <item>Upload more profile pictures, to let them see your cool things.</item>
        <item>Send text / emoji / picture / audio / video file over chat</item>
        <item>Make the private messages, with new friends.</item>
        <item>Enjoy the real time conversation using Firebase Technology</item>
    </string-array>
    <string name="image_profile_mandatory">Please upload a profile picture. The other hotties would like to see you!</string>
    <string name="error_no_gender">Please select your gender</string>
    <string name="error_no_birthday_title">Please select your birthday</string>
    <string name="error_no_birthday_message">To tell us how old are you?, because this app doesn\'t allow the under age users enter it.</string>
    <string name="error_unchecked_agreements">Please read and agreed to terms and conditions</string>
    <string name="error_under_age">You must be at least 13 years old.</string>
    <string name="error_too_old_age">You must be under 100 years old.</string>
    <string name="term_and_condition">I have agreed to&#160;</string>
    <string name="term_and_condition_clickable">the terms and conditions</string>
    <string name="about_our_services">About our services</string>
    <string name="registration">Registration.</string>
    <string name="registration_msg">You must register for our Services using accurate data, provide your name, email address, profile picture, and gender to register for our Services.</string>
    <string name="age">Age.</string>
    <string name="agee">Age </string>
    <string name="age_msg">You must be at least 13 years old to use our Services (or such greater age required in your country for you to be authorized to use our Services without parental approval). In addition to being of the minimum required age to use our Services under applicable law, if you are not old enough to have authority to agree to our Terms in your country, your parent or guardian must agree to our Terms on your behalf.</string>
    <string name="device_and_software">Devices and Software.</string>
    <string name="device_and_software_msg">You must provide certain devices, software, and data connections to use our Services, which we otherwise do not supply. For as long as you use our Services, you consent to downloading and installing updates to our Services, including automatically.</string>
    <string name="privacy_and_policy">Privacy policy and user data</string>
    <string name="privacy_msg">You share your information as you use and communicate through our Services, and we share your information to help us operate, provide, improve, understand, customize, support, and market our Services.</string>
    <string name="account_information">Account Information.</string>
    <string name="account_information_msg">Your profile name and photo, online status and status message, last seen status, and receipts may be available to anyone who uses our Services, although you can configure your Services settings to manage certain information available to other users</string>
    <string name="contacts_and_order">Your Contacts and Others. </string>
    <string name="contacts_msg">Users with whom you communicate may store or reshare your information (including your email address or messages) with others on and off our Services. You can use your Services settings and the block feature in our Services to manage the users of our Services with whom you communicate and certain information you share.</string>
    <string name="third_party">Third-Party Services.</string>
    <string name="third_party_msg">When you use third-party services that are integrated with our Services such as Facebook or Google,we will receive information about your profile name, email, profile picture and birthday</string>
    <string name="prohibited">Prohibited content</string>
    <string name="prohibited_msg">In cases when you upload porn picture files for profile or message, or saying bad words, you will be banned from Fynder and we have right to remove your prohibited content.</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="today">TODAY</string>
    <string name="about_share">Share</string>
    <string name="about_rating">Give us a rating</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_contact_us">Contact us</string>
    <string-array name="about_email_to">
        <item>rndtechnosoft@gmail.com</item>
    </string-array>
    <string name="about_share_title">Share to..</string>
    <string name="about_share_message">Recommend Fynder.Meet thousands of people around the world, over global Chat Room. . Url: https://play.google.com/store/apps/details?id=com.rndtechnosoft.Fynder</string>
    <string name="about_email_title">Send mail using..</string>
    <string name="about_email_subject">Contact us from Fynder app</string>
    <string name="last_online">Login Status : </string>
    <string name="attention">Attention</string>
    <string name="online_users">Online users</string>
    <string name="basic_info">BASIC INFO</string>
    <string name="you">You</string>
    <string name="gallery">Gallery</string>
    <string name="home">Profile</string>
    <string name="block">Block</string>
    <string name="chat">Chat</string>
    <string name="add_friend">Add friend</string>
    <string name="ready_to_invite">Ready to invite</string>
    <string name="text_my_friend">My friend</string>
    <string name="text_its_me">It\'s me</string>
    <string name="alert_waiting_invitation">Waiting for accept</string>
    <string name="alert_pending_invitation">You have a pending the invitation from this user.</string>
    <string name="alert_declined_invitation">This user has decline your invitation.</string>
    <string name="alert_declined_by_me">You have declined the invitation from this user.</string>
    <string name="alert_block_user">Sorry, you have not permission to contact this user</string>
    <string name="alert_block_by_me">This user had blocked by you</string>
    <string name="message_dialog_pending">You want to accept this invitation?</string>
    <string name="message_dialog_decline">Are you sure? you want decline this user?</string>
    <string name="message_dialog_un_block">Are you sure? now you open for this user to be your friend?</string>
    <string name="message_dialog_block">Are you sure you want to block this user?</string>
    <string name="toast_now_friend">Now, we are friend..</string>
    <string name="option_camera">Camera</string>
    <string name="option_gallery">Choose existing image</string>
    <string name="option_remove">Remove image</string>
    <string name="option_set_main">Set main image</string>
    <string name="option_view">View image</string>
    <string name="title_decline">Decline</string>
    <string name="title_invitation">Sent invitation</string>
    <string name="title_select_image">Select an image</string>
    <string name="title_add_image">Add an image</string>
    <string name="title_delete_image">Delete an image</string>
    <string name="title_block">Block</string>
    <string name="text_blocked">Blocked</string>
    <string name="message_decline">Are you sure you want to decline this invitation ??</string>
    <string name="message_block">Are you sure you want to block this user ??</string>
    <string name="message_dialog_image">Are you sure? to delete this image?</string>
    <string name="message_sent_invitation">You want to send the friend invitation</string>
    <string name="uploading_image">Uploading image..</string>
    <string name="main_image">MAIN</string>
    <string name="edit">Edit</string>
    <string name="Name">Name :</string>
    <string name="birthday">Date of Birth : </string>
    <string name="action_block">Block this user</string>
    <string name="action_logout">Logout</string>
    <string name="friend_information">Friend Information</string>
    <string name="menu_leave">Leave room</string>
    <string name="menu_subscribe">Subscribe it</string>
    <string name="menu_blocked_user">Blocked users</string>
    <string name="menu_list_of_subscriber">Subscriber users</string>
    <string name="menu_room_invitation">Invite friends</string>
    <string name="menu_view_online">View online users</string>
    <string name="friend_list">Friends</string>
    <string name="invitation_list">Invitations</string>
    <string name="pending_acceptance">Pending acceptance</string>
    <string name="declined">Declined contacts</string>
    <string name="blocked">Blocked contacts</string>
    <string name="no_friend_title">Find a new friend</string>
    <string name="no_friend_message">Currently, you have no friend available, but don\'t worry you will get a new friend here.</string>
    <string name="no_friend_button">Find Now</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="drawer_myprofile">My Profile</string>
    <string name="drawer_rate">Rate Us</string>
    <string name="drawer_more">More Apps</string>
    <string name="drawer_setting">About Us</string>
    <string name="drawer_share">Share App</string>
    <string name="drawer_contact">Contact Us</string>
    <string name="drawer_settings">Settings</string>
    <string name="action_edit">Edit Profile</string>
</resources>