<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/about_our_services"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_msg"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_msg"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_and_software"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_and_software_msg"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/privacy_and_policy"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_msg"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_information"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_information_msg"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_and_order"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts_msg"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/third_party"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_party_msg"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/prohibited"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prohibited_msg"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</ScrollView>