<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rndtechnosoft.fynder.activity.ProfileActivity">
    <item
        android:id="@+id/action_block"
        android:orderInCategory="100"
        android:title="@string/action_block"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_logout"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_profile"
        android:title="@string/action_edit"
        android:visible="true"
        app:showAsAction="always"
        />
</menu>
