<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_friend_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:visibility="visible"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/color_white"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/no_friend_title"
            android:textStyle="bold" />

        <com.rndtechnosoft.fynder.utility.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/no_friend_message" />


        <Button
            android:id="@+id/button_find_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/rounded_button"
            android:text="@string/no_friend_button"
            android:textColor="@color/color_white" />

    </LinearLayout>

</android.support.v7.widget.CardView>
