<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/image_profile"
                android:layout_width="@dimen/icon_main_profile"
                android:layout_height="@dimen/icon_main_profile"
                android:clickable="true" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="-45dp"
                android:layout_toRightOf="@id/image_profile"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_camera" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_display_name"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.rndtechnosoft.fynder.utility.RegularTextView
                android:id="@+id/gender_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_male"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/male"
                android:textColor="@color/colorAccent" />

            <com.rndtechnosoft.fynder.utility.RegularTextView
                android:id="@+id/gender_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_female"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/female"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/birthday"
                android:inputType="none"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/check_box_term_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.rndtechnosoft.fynder.utility.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_and_condition"
                android:textSize="12sp" />

            <com.rndtechnosoft.fynder.utility.RegularTextView
                android:id="@+id/text_term_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/term_and_condition_clickable"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/next_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
